Verion 0.9.44dev (?? ??? 2004)
  - Added upcoming.php page that can be used as an iframe in non-WebCalendar
    pages to present a list of upcoming events.
  - Fixed bug 960897: Could not modify user's email address if no last
    name was set
  - Fixed bug 980215: GLobal var $STARTVIEW was not declared global.
  - Fixed bug: do_redirect() calls should not have the '&' escaped into '&amp;'
  - Added patch 984544: fix ics url for public access calendar in preferences
  - Added "Today" link in trailer
  - Fixed bug 826651: Modified report of public cal. will stored under admin-user
  - Added "Copy event" option when viewing an event.  This fills in the
    edit_entry.php form with details from the event you want to copy.
  - Fixed some of the "undefined variable" errors that you get when
    global variables is turned off in php.ini.
  - Fixed bug: If user creates a report that does not include themself,
    the user will be unable to edit/delete the report.
  - Added patch 975787: allow automatic inclusion of public access events
  - Added patch 980287: added mysqli support to php-dbi.php
  - Fixed bug 966948: single quotes not working in passwords if magic
    quotes is on.
  - Fixed bug 950185: remove spaces between multiple addresses in mailto URL
    for view entry page
  - Fixed bug 960793: purge (Delete events) only worked with MySQL.
  - Fixed bug 949287: Finnish was missing from config.php.
  - Patch 972689: use preferences for example month date format in pref.php
  - Patch 975785: admin.php was not showing language setting properly
  - Patch 975554: event end time as an option (rather than just duration)
  - Patch 972695: in edit_entry.php, use preferences to determine
    if repeat info starts on sun/mon
  - Patch 972602: Missing translation in pref.php for language
  - Patch 972687: Fixed untranslated text in purge.php
  - Added patch 972688: attempt to translate language names ("English")