@@ -1,4 +1,5 @@
 Verion 0.9.44dev (?? ??? 2004)
+  - Fixed bug in repeating event conflict checking when using "month by day"
   - Added upcoming.php page that can be used as an iframe in non-WebCalendar
     pages to present a list of upcoming events.
   - Fixed bug 960897: Could not modify user's email address if no last
